<resources>
    <string name="main_screen">Main Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="register_screen">Register Screen</string>
    <string name="app_title">Study Room</string>
    <string name="login">Login</string>
    <string name="login_fail">Login failed. Try again.</string>
    <string name="login_fail_message">Invalid username/password</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number(optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">E-Mail Address</string>
    <string name="confirm_email">Confirm E-mail Address</string>
    <string name="confirm">Confirm</string>
    <string name="new_account"><u>Create New Account</u></string>
    <string name="old_account"><u>Forgot Username/Password</u></string>
    <string name="action_settings"></string>
    <string name="phone_number_hint">Example: 1231231234</string>
    <string name="retrieve">Retrieve</string>
    <string name="verify">Verify</string>

    <string name="messageHint">Type here...</string>

    <!-- Home Screen -->
    <string name="joinRoomBtn">Join Room</string>
    <string name="createRoomBtn">Create Room</string>
    <string name="mapBtn">View Map</string>

    <!-- join chat popup fragment -->
    <string name="createChatTitle">Enter ChatRoom Name</string>
    <string name="submitBtnTxt">Submit</string>

    <!-- create chat popup fragment -->
    <string name="joinChatTitle">Enter ChatRoom Name</string>
    <string name="title_activity_study_finder">Map</string>
    <string name="title_activity_map_with_drawer">MapWithDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_homescreen_drawer">HomescreenDrawer</string>
    <string name="title_activity_chat_room">ChatRoomActivit</string>

    <!-- chatroom menu-->
    <string name="addUserMenu">Add User</string>
    <string name="addGroupBtn">Add StudyGroup</string>

    <!-- icon options-->
    <string name="deleteGroupBtn">Delete Group</string>
</resources>
