<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cody_.studentchat.Pages.CreateAccount"
    tools:layout_editor_absoluteY="81dp" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCreateUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTextCreateUsername"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCreatePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextCreatePassword"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCreateEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextCreateEmail"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLength="32" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewConfirmEmail"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_email" />

            <EditText
                android:id="@+id/editTextConfirmEmail"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLength="32" />

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:maxLength="16" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>